@@ -29,7 +29,7 @@ class EventsListShortcut {
     $locale = str_replace('_', '-', get_locale());
     $groupName = $atts_with_overriden_defaults['group-name'];
     $url = Settings::getUrl();
-    $timeZone = get_option('timezone_string');
+    $timeZone = wp_timezone_string();
     $isShortOffsetNameShown = Settings::isShortOffsetNameShown();
 
     ob_start();
