@@ -30,7 +30,7 @@ class EventsListWidget extends \WP_Widget {
     $locale = str_replace('_', '-', get_locale());
     $groupName = isset($options['groupName']) ? $options['groupName'] : '';
     $url = Settings::getUrl();
-    $timeZone = get_option('timezone_string');
+    $timeZone = wp_timezone_string();
     $isShortOffsetNameShown = Settings::isShortOffsetNameShown();
 
     require dirname(__DIR__) . '/view/events-list.php';
